k8s-deploy/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: localhost:32000/jenkins
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: jenkins-home
        emptyDir: {}
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
