k8s-deploy/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: "10.21.14.144.xip.io"
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /jenkins
